Rewrite HBase test harness
This commit updates the default HBase version in titan-hbase from
0.94.7 to 0.94.12.  The new test harness and pom supports targeting
Hadoop versions besides the default.  I tested retargeting with Hadoop
versions 2.0.0-alpha and 2.2.0.  The default Hadoop target version
remains unchanged at 1.0.4.

Updating the HBase version from 0.94.7 to .12 should be safe:

http://hbase.apache.org/upgrading.html#hbase.binary.compatibility